Closed
Bug 256631
Opened 21 years ago
Closed 21 years ago
TB07x crash exiting Thunderbird [@ nsMimeHtmlDisplayEmitter::GenerateDateString ]
Categories
(MailNews Core :: MIME, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: jay, Assigned: timeless)
References
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(1 obsolete file)
This is a topcrasher with Thunderbird 0.7.3 (and there have been a few crashes
with previous 0.7.x releases as well). Most of the comments mention exiting the
app:
http://talkback-public.mozilla.org/talkback/fastfind.jsp?search=1&searchby=stacksig&match=contains&searchfor=nsMimeHtmlDisplayEmitter%3A%3AGenerateDateString&vendor=All&product=All&platform=All&buildid=&sdate=&stime=&edate=&etime=
Here is a snapshot of the latest Talkback data for TB073:
Rank StackSignature Count
16 nsMimeHtmlDisplayEmitter::GenerateDateString 30
Source File :
e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line : 320
====================================================================================================
Count Offset Real Signature
[ 9 nsMimeHtmlDisplayEmitter::GenerateDateString f67b30c9 -
nsMimeHtmlDisplayEmitter::GenerateDateString ]
Crash date range: 12-AUG-04 to 19-AUG-04
Min/Max Seconds since last crash: 2557 - 376188
Min/Max Runtime: 2557 - 376188
Count Platform List
9 Windows XP [Windows NT 5.1 build 2600]
Count Build Id List
9 2004080301
No of Unique Users 9
Stack trace(Frame)
nsMimeHtmlDisplayEmitter::GenerateDateString
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 320]
nsMimeHtmlDisplayEmitter::BroadcastHeaders
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 199]
nsMimeHtmlDisplayEmitter::WriteHTMLHeaders
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 264]
nsMimeHtmlDisplayEmitter::EndHeader
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 360]
MimeMessage_parse_line
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimemsg.cpp
line 283]
convert_and_send_buffer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimebuf.cpp
line 168]
mime_LineBuffer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimebuf.cpp
line 256]
MimeObject_parse_buffer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimeobj.cpp
line 252]
nsStreamConverter::OnDataAvailable
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/nsStreamConverter.cpp
line 952]
nsMailboxProtocol::ReadMessageResponse
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/local/src/nsMailboxProtocol.cpp
line 592]
nsMailboxProtocol::ProcessProtocolState
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/local/src/nsMailboxProtocol.cpp
line 687]
nsMsgProtocol::OnDataAvailable
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/base/util/nsMsgProtocol.cpp
line 325]
nsInputStreamPump::OnStateTransfer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/netwerk/base/src/nsInputStreamPump.cpp
line 433]
nsInputStreamPump::OnInputStreamReady
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/netwerk/base/src/nsInputStreamPump.cpp
line 337]
nsOutputStreamReadyEvent::EventHandler
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/xpcom/io/nsStreamUtils.cpp
line 215]
SHELL32.dll + 0x4e0c24 (0x778b0c24)
nsHTMLTableColElement::QueryInterface
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/content/html/content/src/nsHTMLTableColElement.cpp
line 134]
nsEditProperty::table
====================================================================================================
Count Offset Real Signature
[ 7 nsMimeHtmlDisplayEmitter::GenerateDateString db1ccfb0 -
nsMimeHtmlDisplayEmitter::GenerateDateString ]
Crash date range: 12-AUG-04 to 20-AUG-04
Min/Max Seconds since last crash: 222 - 135248
Min/Max Runtime: 222 - 162017
Count Platform List
2 Windows 98 [Windows 98 4.10 build 67766446]
2 Windows 2K [Windows NT 5.0 build 2195]
1 Windows XP [Windows NT 5.1 build 2600]
1 Windows ME [Windows 98 4.90 build 73010104]
1 Windows 98 [Windows 98 4.10 build 67766222]
Count Build Id List
7 2004080301
No of Unique Users 7
Stack trace(Frame)
nsMimeHtmlDisplayEmitter::GenerateDateString
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 320]
nsMimeHtmlDisplayEmitter::BroadcastHeaders
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 199]
nsMimeHtmlDisplayEmitter::WriteHTMLHeaders
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 264]
nsMimeHtmlDisplayEmitter::EndHeader
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 360]
MimeMessage_parse_line
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimemsg.cpp
line 283]
convert_and_send_buffer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimebuf.cpp
line 168]
mime_LineBuffer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimebuf.cpp
line 256]
MimeObject_parse_buffer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimeobj.cpp
line 252]
nsStreamConverter::OnDataAvailable
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/nsStreamConverter.cpp
line 952]
nsMailboxProtocol::ReadMessageResponse
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/local/src/nsMailboxProtocol.cpp
line 592]
nsMailboxProtocol::ProcessProtocolState
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/local/src/nsMailboxProtocol.cpp
line 687]
nsMsgProtocol::OnDataAvailable
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/base/util/nsMsgProtocol.cpp
line 325]
nsInputStreamPump::OnStateTransfer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/netwerk/base/src/nsInputStreamPump.cpp
line 433]
nsInputStreamPump::OnInputStreamReady
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/netwerk/base/src/nsInputStreamPump.cpp
line 337]
nsOutputStreamReadyEvent::EventHandler
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/xpcom/io/nsStreamUtils.cpp
line 215]
0x778b0c24
(577220) Comments: nothing at the moment; screen started to flutter
(552333) Comments: Shutting down Thunderbird
====================================================================================================
Count Offset Real Signature
[ 4 nsMimeHtmlDisplayEmitter::GenerateDateString d6e70eba -
nsMimeHtmlDisplayEmitter::GenerateDateString ]
[ 2 nsMimeHtmlDisplayEmitter::GenerateDateString bf44a046 -
nsMimeHtmlDisplayEmitter::GenerateDateString ]
[ 2 nsMimeHtmlDisplayEmitter::GenerateDateString 48e1ebed -
nsMimeHtmlDisplayEmitter::GenerateDateString ]
Crash date range: 12-AUG-04 to 21-AUG-04
Min/Max Seconds since last crash: 6505 - 338862
Min/Max Runtime: 6505 - 338862
Count Platform List
4 Windows XP [Windows NT 5.1 build 2600]
4 Windows 2K [Windows NT 5.0 build 2195]
Count Build Id List
8 2004080301
No of Unique Users 8
Stack trace(Frame)
nsMimeHtmlDisplayEmitter::GenerateDateString
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 320]
nsMimeHtmlDisplayEmitter::BroadcastHeaders
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 199]
nsMimeHtmlDisplayEmitter::WriteHTMLHeaders
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 264]
nsMimeHtmlDisplayEmitter::EndHeader
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp
line 360]
MimeMessage_parse_line
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimemsg.cpp
line 283]
convert_and_send_buffer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimebuf.cpp
line 168]
mime_LineBuffer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimebuf.cpp
line 256]
MimeObject_parse_buffer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/mimeobj.cpp
line 252]
nsStreamConverter::OnDataAvailable
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/mime/src/nsStreamConverter.cpp
line 952]
nsMailboxProtocol::ReadMessageResponse
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/local/src/nsMailboxProtocol.cpp
line 592]
nsMailboxProtocol::ProcessProtocolState
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/local/src/nsMailboxProtocol.cpp
line 687]
nsMsgProtocol::OnDataAvailable
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/mailnews/base/util/nsMsgProtocol.cpp
line 325]
nsInputStreamPump::OnStateTransfer
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/netwerk/base/src/nsInputStreamPump.cpp
line 433]
nsInputStreamPump::OnInputStreamReady
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/netwerk/base/src/nsInputStreamPump.cpp
line 337]
nsOutputStreamReadyEvent::EventHandler
[e:/builds/tbird-0.7.3/WINNT_5.0_Clobber/mozilla/xpcom/io/nsStreamUtils.cpp
line 215]
SETUPAPI.DLL + 0x30c24 (0x778b0c24)
(564417) Comments: right clicked web page in firefox typed up email sent
then thunderbird crashed. email appears to have sent.
Updated•21 years ago
|
Severity: normal → critical
Summary: TB07x crash exiting Thunderbird [@ nsMimeHtmlDisplayEmitter::GenerateDateString] → TB07x crash exiting Thunderbird [@ nsMimeHtmlDisplayEmitter::GenerateDateString ]
*** Bug 264312 has been marked as a duplicate of this bug. ***
Comment 2•21 years ago
|
||
This happens to me pretty regularly too. I'd be happy to help if you have
trouble reproducing it.
Attachment #163920 -
Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #163920 -
Flags: review?(neil.parkwaycc.co.uk)
Comment 4•21 years ago
|
||
Comment on attachment 163920 [details] [diff] [review]
check for failure
Bah, just because I touched the code last year doesn't mean I own it :-P I'm
guessing that as GenerateDateString is making assumptions its caller probably
needs fixing too. And I would like to know why this code is running during
shutdown...
Attachment #163920 -
Flags: review?(neil.parkwaycc.co.uk) → review?(bienvenu)
Comment 5•21 years ago
|
||
Comment on attachment 163920 [details] [diff] [review]
check for failure
it could be the junk mail controls running on a new message that arrived at
shutdown time...
Attachment #163920 -
Flags: review?(bienvenu) → review+
Comment 6•21 years ago
|
||
Comment on attachment 163920 [details] [diff] [review]
check for failure
I still think the caller needs to handle failure...
Attachment #163920 -
Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
Comment on attachment 163920 [details] [diff] [review]
check for failure
mozilla/mailnews/mime/emitters/src/nsMimeHtmlEmitter.cpp 1.78
Attachment #163920 -
Attachment is obsolete: true
the only talkback incidents are from old trunk builds and branch builds
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 9•21 years ago
|
||
Please don't close this, unless it's been fixed post-0.9. I just sent a
trackback from 0.9. This happens on every close for me with Thunderbird 0.9.
| Assignee | ||
Comment 10•21 years ago
|
||
rg@onepercentsoftware.com: it was not fixed on any aviary branches. if you want
it fixed, figure out how to nominate it for such branches. this is fixed on
trunk, which is what the fixed designation is for.
Version: Other Branch → Trunk
Updated•21 years ago
|
Product: MailNews → Core
Updated•18 years ago
|
Product: Core → MailNews Core
Updated•15 years ago
|
Crash Signature: [@ nsMimeHtmlDisplayEmitter::GenerateDateString ]
You need to log in
before you can comment on or make changes to this bug.
Description
•