Bug 256631 TB07x crash exiting Thunderbird [@ nsMimeHtmlDisplayEmitter::GenerateDateString ] r=bienvenu sr=neil